Grupo20/tpFinal/y.output
Terminals unused in grammar

   REA


Gramática

    0 $accept: prog $end

    1 prog: lines

    2 lines: line

    3 $@1: /* vacío */

    4 lines: line $@1 lines

    5 line: W
    6     | I
    7     | A FIN
    8     | DIS FIN
    9     | GET ID FIN
   10     | D FIN
   11     | F

   12 W: WHILE COMPARATION BODY

   13 I: IF COMPARATION BODY

   14 $@2: /* vacío */

   15 I: IF COMPARATION BODY $@2 ELSE BODY

   16 COMPARATION: PARAB COND PARCE

   17 COND: CONDFINAL
   18     | NOT CONDFINAL

   19 $@3: /* vacío */

   20 COND: CONDFINAL $@3 OR CONDFINAL

   21 $@4: /* vacío */

   22 COND: CONDFINAL $@4 AND CONDFINAL
   23     | E

   24 CONDFINAL: ID CONDITION V

   25 CONDITION: OP_MAY
   26          | OP_MEN
   27          | OP_MAYIGU
   28          | OP_MENIGU
   29          | OP_IGU
   30          | OP_DIST

   31 $@5: /* vacío */

   32 $@6: /* vacío */

   33 BODY: CORAB $@5 lines $@6 CORCE

   34 A: ID OP_AS V
   35  | ID OP_AS STRING

   36 DIS: DISPLAY STRING
   37    | DISPLAY ID

   38 D: DIM LISTAVARIABLE AS LISTATIPO

   39 LISTAVARIABLE: CUAAB VARIABLES CUACE

   40 VARIABLES: ID
   41          | VARIABLES COMA ID

   42 LISTATIPO: CUAAB TIPOS CUACE

   43 TIPOS: TIPO
   44      | TIPOS COMA TIPO

   45 TIPO: STRINGT
   46     | REAL
   47     | INTEGER

   48 $@7: /* vacío */

   49 F: FOR ID OP_AS INT TO INT STEP $@7 lines NEXT ID

   50 STEP: CUAAB CUACE
   51     | CUAAB INT CUACE

   52 E: EQU PARAB EXPRESIONEQU FIN LISTAEQU PARCE

   53 EQU: EQUMAX
   54    | EQUMIN

   55 EXPRESIONEQU: INT SIGNO INT

   56 SIGNO: MAS
   57      | MENOS
   58      | POR
   59      | DIV

   60 LISTAEQU: CUAAB ELEMENTOEQU CUACE

   61 ELEMENTOEQU: V
   62            | ELEMENTOEQU COMA V

   63 V: ID
   64  | INT


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
STRING (258) 35 36
INT (259) 49 51 55 64
ID (260) 9 24 34 35 37 40 41 49 63
WHILE (261) 12
PARAB (262) 16 52
PARCE (263) 16 52
CORAB (264) 33
CORCE (265) 33
OP_MAY (266) 25
IF (267) 13 15
ELSE (268) 15
OP_AS (269) 34 35 49
DIM (270) 38
AS (271) 38
COMA (272) 41 44 62
STRINGT (273) 45
INTEGER (274) 47
REAL (275) 46
CUAAB (276) 39 42 50 51 60
CUACE (277) 39 42 50 51 60
FOR (278) 49
TO (279) 49
NEXT (280) 49
EQUMAX (281) 53
EQUMIN (282) 54
FIN (283) 7 8 9 10 52
OP_MEN (284) 26
OP_MAYIGU (285) 27
OP_MENIGU (286) 28
OP_IGU (287) 29
OP_DIST (288) 30
DISPLAY (289) 36 37
GET (290) 9
NOT (291) 18
AND (292) 22
OR (293) 20
REA (294)
MAS (295) 56
MENOS (296) 57
POR (297) 58
DIV (298) 59


No terminales con las reglas donde aparecen

$accept (44)
    en la izquierda: 0
prog (45)
    en la izquierda: 1, en la derecha: 0
lines (46)
    en la izquierda: 2 4, en la derecha: 1 4 33 49
$@1 (47)
    en la izquierda: 3, en la derecha: 4
line (48)
    en la izquierda: 5 6 7 8 9 10 11, en la derecha: 2 4
W (49)
    en la izquierda: 12, en la derecha: 5
I (50)
    en la izquierda: 13 15, en la derecha: 6
$@2 (51)
    en la izquierda: 14, en la derecha: 15
COMPARATION (52)
    en la izquierda: 16, en la derecha: 12 13 15
COND (53)
    en la izquierda: 17 18 20 22 23, en la derecha: 16
$@3 (54)
    en la izquierda: 19, en la derecha: 20
$@4 (55)
    en la izquierda: 21, en la derecha: 22
CONDFINAL (56)
    en la izquierda: 24, en la derecha: 17 18 20 22
CONDITION (57)
    en la izquierda: 25 26 27 28 29 30, en la derecha: 24
BODY (58)
    en la izquierda: 33, en la derecha: 12 13 15
$@5 (59)
    en la izquierda: 31, en la derecha: 33
$@6 (60)
    en la izquierda: 32, en la derecha: 33
A (61)
    en la izquierda: 34 35, en la derecha: 7
DIS (62)
    en la izquierda: 36 37, en la derecha: 8
D (63)
    en la izquierda: 38, en la derecha: 10
LISTAVARIABLE (64)
    en la izquierda: 39, en la derecha: 38
VARIABLES (65)
    en la izquierda: 40 41, en la derecha: 39 41
LISTATIPO (66)
    en la izquierda: 42, en la derecha: 38
TIPOS (67)
    en la izquierda: 43 44, en la derecha: 42 44
TIPO (68)
    en la izquierda: 45 46 47, en la derecha: 43 44
F (69)
    en la izquierda: 49, en la derecha: 11
$@7 (70)
    en la izquierda: 48, en la derecha: 49
STEP (71)
    en la izquierda: 50 51, en la derecha: 49
E (72)
    en la izquierda: 52, en la derecha: 23
EQU (73)
    en la izquierda: 53 54, en la derecha: 52
EXPRESIONEQU (74)
    en la izquierda: 55, en la derecha: 52
SIGNO (75)
    en la izquierda: 56 57 58 59, en la derecha: 55
LISTAEQU (76)
    en la izquierda: 60, en la derecha: 52
ELEMENTOEQU (77)
    en la izquierda: 61 62, en la derecha: 60 62
V (78)
    en la izquierda: 63 64, en la derecha: 24 34 61 62


estado 0

    0 $accept: . prog $end

    ID       desplazar e ir al estado 1
    WHILE    desplazar e ir al estado 2
    IF       desplazar e ir al estado 3
    DIM      desplazar e ir al estado 4
    FOR      desplazar e ir al estado 5
    DISPLAY  desplazar e ir al estado 6
    GET      desplazar e ir al estado 7

    prog   ir al estado 8
    lines  ir al estado 9
    line   ir al estado 10
    W      ir al estado 11
    I      ir al estado 12
    A      ir al estado 13
    DIS    ir al estado 14
    D      ir al estado 15
    F      ir al estado 16


estado 1

   34 A: ID . OP_AS V
   35  | ID . OP_AS STRING

    OP_AS  desplazar e ir al estado 17


estado 2

   12 W: WHILE . COMPARATION BODY

    PARAB  desplazar e ir al estado 18

    COMPARATION  ir al estado 19


estado 3

   13 I: IF . COMPARATION BODY
   15  | IF . COMPARATION BODY $@2 ELSE BODY

    PARAB  desplazar e ir al estado 18

    COMPARATION  ir al estado 20


estado 4

   38 D: DIM . LISTAVARIABLE AS LISTATIPO

    CUAAB  desplazar e ir al estado 21

    LISTAVARIABLE  ir al estado 22


estado 5

   49 F: FOR . ID OP_AS INT TO INT STEP $@7 lines NEXT ID

    ID  desplazar e ir al estado 23


estado 6

   36 DIS: DISPLAY . STRING
   37    | DISPLAY . ID

    STRING  desplazar e ir al estado 24
    ID      desplazar e ir al estado 25


estado 7

    9 line: GET . ID FIN

    ID  desplazar e ir al estado 26


estado 8

    0 $accept: prog . $end

    $end  desplazar e ir al estado 27


estado 9

    1 prog: lines .

    $default  reduce usando la regla 1 (prog)


estado 10

    2 lines: line .
    4      | line . $@1 lines

    $end      reduce usando la regla 2 (lines)
    CORCE     reduce usando la regla 2 (lines)
    NEXT      reduce usando la regla 2 (lines)
    $default  reduce usando la regla 3 ($@1)

    $@1  ir al estado 28


estado 11

    5 line: W .

    $default  reduce usando la regla 5 (line)


estado 12

    6 line: I .

    $default  reduce usando la regla 6 (line)


estado 13

    7 line: A . FIN

    FIN  desplazar e ir al estado 29


estado 14

    8 line: DIS . FIN

    FIN  desplazar e ir al estado 30


estado 15

   10 line: D . FIN

    FIN  desplazar e ir al estado 31


estado 16

   11 line: F .

    $default  reduce usando la regla 11 (line)


estado 17

   34 A: ID OP_AS . V
   35  | ID OP_AS . STRING

    STRING  desplazar e ir al estado 32
    INT     desplazar e ir al estado 33
    ID      desplazar e ir al estado 34

    V  ir al estado 35


estado 18

   16 COMPARATION: PARAB . COND PARCE

    ID      desplazar e ir al estado 36
    EQUMAX  desplazar e ir al estado 37
    EQUMIN  desplazar e ir al estado 38
    NOT     desplazar e ir al estado 39

    COND       ir al estado 40
    CONDFINAL  ir al estado 41
    E          ir al estado 42
    EQU        ir al estado 43


estado 19

   12 W: WHILE COMPARATION . BODY

    CORAB  desplazar e ir al estado 44

    BODY  ir al estado 45


estado 20

   13 I: IF COMPARATION . BODY
   15  | IF COMPARATION . BODY $@2 ELSE BODY

    CORAB  desplazar e ir al estado 44

    BODY  ir al estado 46


estado 21

   39 LISTAVARIABLE: CUAAB . VARIABLES CUACE

    ID  desplazar e ir al estado 47

    VARIABLES  ir al estado 48


estado 22

   38 D: DIM LISTAVARIABLE . AS LISTATIPO

    AS  desplazar e ir al estado 49


estado 23

   49 F: FOR ID . OP_AS INT TO INT STEP $@7 lines NEXT ID

    OP_AS  desplazar e ir al estado 50


estado 24

   36 DIS: DISPLAY STRING .

    $default  reduce usando la regla 36 (DIS)


estado 25

   37 DIS: DISPLAY ID .

    $default  reduce usando la regla 37 (DIS)


estado 26

    9 line: GET ID . FIN

    FIN  desplazar e ir al estado 51


estado 27

    0 $accept: prog $end .

    $default  aceptar


estado 28

    4 lines: line $@1 . lines

    ID       desplazar e ir al estado 1
    WHILE    desplazar e ir al estado 2
    IF       desplazar e ir al estado 3
    DIM      desplazar e ir al estado 4
    FOR      desplazar e ir al estado 5
    DISPLAY  desplazar e ir al estado 6
    GET      desplazar e ir al estado 7

    lines  ir al estado 52
    line   ir al estado 10
    W      ir al estado 11
    I      ir al estado 12
    A      ir al estado 13
    DIS    ir al estado 14
    D      ir al estado 15
    F      ir al estado 16


estado 29

    7 line: A FIN .

    $default  reduce usando la regla 7 (line)


estado 30

    8 line: DIS FIN .

    $default  reduce usando la regla 8 (line)


estado 31

   10 line: D FIN .

    $default  reduce usando la regla 10 (line)


estado 32

   35 A: ID OP_AS STRING .

    $default  reduce usando la regla 35 (A)


estado 33

   64 V: INT .

    $default  reduce usando la regla 64 (V)


estado 34

   63 V: ID .

    $default  reduce usando la regla 63 (V)


estado 35

   34 A: ID OP_AS V .

    $default  reduce usando la regla 34 (A)


estado 36

   24 CONDFINAL: ID . CONDITION V

    OP_MAY     desplazar e ir al estado 53
    OP_MEN     desplazar e ir al estado 54
    OP_MAYIGU  desplazar e ir al estado 55
    OP_MENIGU  desplazar e ir al estado 56
    OP_IGU     desplazar e ir al estado 57
    OP_DIST    desplazar e ir al estado 58

    CONDITION  ir al estado 59


estado 37

   53 EQU: EQUMAX .

    $default  reduce usando la regla 53 (EQU)


estado 38

   54 EQU: EQUMIN .

    $default  reduce usando la regla 54 (EQU)


estado 39

   18 COND: NOT . CONDFINAL

    ID  desplazar e ir al estado 36

    CONDFINAL  ir al estado 60


estado 40

   16 COMPARATION: PARAB COND . PARCE

    PARCE  desplazar e ir al estado 61


estado 41

   17 COND: CONDFINAL .
   20     | CONDFINAL . $@3 OR CONDFINAL
   22     | CONDFINAL . $@4 AND CONDFINAL

    AND       reduce usando la regla 21 ($@4)
    OR        reduce usando la regla 19 ($@3)
    $default  reduce usando la regla 17 (COND)

    $@3  ir al estado 62
    $@4  ir al estado 63


estado 42

   23 COND: E .

    $default  reduce usando la regla 23 (COND)


estado 43

   52 E: EQU . PARAB EXPRESIONEQU FIN LISTAEQU PARCE

    PARAB  desplazar e ir al estado 64


estado 44

   33 BODY: CORAB . $@5 lines $@6 CORCE

    $default  reduce usando la regla 31 ($@5)

    $@5  ir al estado 65


estado 45

   12 W: WHILE COMPARATION BODY .

    $default  reduce usando la regla 12 (W)


estado 46

   13 I: IF COMPARATION BODY .
   15  | IF COMPARATION BODY . $@2 ELSE BODY

    ELSE      reduce usando la regla 14 ($@2)
    $default  reduce usando la regla 13 (I)

    $@2  ir al estado 66


estado 47

   40 VARIABLES: ID .

    $default  reduce usando la regla 40 (VARIABLES)


estado 48

   39 LISTAVARIABLE: CUAAB VARIABLES . CUACE
   41 VARIABLES: VARIABLES . COMA ID

    COMA   desplazar e ir al estado 67
    CUACE  desplazar e ir al estado 68


estado 49

   38 D: DIM LISTAVARIABLE AS . LISTATIPO

    CUAAB  desplazar e ir al estado 69

    LISTATIPO  ir al estado 70


estado 50

   49 F: FOR ID OP_AS . INT TO INT STEP $@7 lines NEXT ID

    INT  desplazar e ir al estado 71


estado 51

    9 line: GET ID FIN .

    $default  reduce usando la regla 9 (line)


estado 52

    4 lines: line $@1 lines .

    $default  reduce usando la regla 4 (lines)


estado 53

   25 CONDITION: OP_MAY .

    $default  reduce usando la regla 25 (CONDITION)


estado 54

   26 CONDITION: OP_MEN .

    $default  reduce usando la regla 26 (CONDITION)


estado 55

   27 CONDITION: OP_MAYIGU .

    $default  reduce usando la regla 27 (CONDITION)


estado 56

   28 CONDITION: OP_MENIGU .

    $default  reduce usando la regla 28 (CONDITION)


estado 57

   29 CONDITION: OP_IGU .

    $default  reduce usando la regla 29 (CONDITION)


estado 58

   30 CONDITION: OP_DIST .

    $default  reduce usando la regla 30 (CONDITION)


estado 59

   24 CONDFINAL: ID CONDITION . V

    INT  desplazar e ir al estado 33
    ID   desplazar e ir al estado 34

    V  ir al estado 72


estado 60

   18 COND: NOT CONDFINAL .

    $default  reduce usando la regla 18 (COND)


estado 61

   16 COMPARATION: PARAB COND PARCE .

    $default  reduce usando la regla 16 (COMPARATION)


estado 62

   20 COND: CONDFINAL $@3 . OR CONDFINAL

    OR  desplazar e ir al estado 73


estado 63

   22 COND: CONDFINAL $@4 . AND CONDFINAL

    AND  desplazar e ir al estado 74


estado 64

   52 E: EQU PARAB . EXPRESIONEQU FIN LISTAEQU PARCE

    INT  desplazar e ir al estado 75

    EXPRESIONEQU  ir al estado 76


estado 65

   33 BODY: CORAB $@5 . lines $@6 CORCE

    ID       desplazar e ir al estado 1
    WHILE    desplazar e ir al estado 2
    IF       desplazar e ir al estado 3
    DIM      desplazar e ir al estado 4
    FOR      desplazar e ir al estado 5
    DISPLAY  desplazar e ir al estado 6
    GET      desplazar e ir al estado 7

    lines  ir al estado 77
    line   ir al estado 10
    W      ir al estado 11
    I      ir al estado 12
    A      ir al estado 13
    DIS    ir al estado 14
    D      ir al estado 15
    F      ir al estado 16


estado 66

   15 I: IF COMPARATION BODY $@2 . ELSE BODY

    ELSE  desplazar e ir al estado 78


estado 67

   41 VARIABLES: VARIABLES COMA . ID

    ID  desplazar e ir al estado 79


estado 68

   39 LISTAVARIABLE: CUAAB VARIABLES CUACE .

    $default  reduce usando la regla 39 (LISTAVARIABLE)


estado 69

   42 LISTATIPO: CUAAB . TIPOS CUACE

    STRINGT  desplazar e ir al estado 80
    INTEGER  desplazar e ir al estado 81
    REAL     desplazar e ir al estado 82

    TIPOS  ir al estado 83
    TIPO   ir al estado 84


estado 70

   38 D: DIM LISTAVARIABLE AS LISTATIPO .

    $default  reduce usando la regla 38 (D)


estado 71

   49 F: FOR ID OP_AS INT . TO INT STEP $@7 lines NEXT ID

    TO  desplazar e ir al estado 85


estado 72

   24 CONDFINAL: ID CONDITION V .

    $default  reduce usando la regla 24 (CONDFINAL)


estado 73

   20 COND: CONDFINAL $@3 OR . CONDFINAL

    ID  desplazar e ir al estado 36

    CONDFINAL  ir al estado 86


estado 74

   22 COND: CONDFINAL $@4 AND . CONDFINAL

    ID  desplazar e ir al estado 36

    CONDFINAL  ir al estado 87


estado 75

   55 EXPRESIONEQU: INT . SIGNO INT

    MAS    desplazar e ir al estado 88
    MENOS  desplazar e ir al estado 89
    POR    desplazar e ir al estado 90
    DIV    desplazar e ir al estado 91

    SIGNO  ir al estado 92


estado 76

   52 E: EQU PARAB EXPRESIONEQU . FIN LISTAEQU PARCE

    FIN  desplazar e ir al estado 93


estado 77

   33 BODY: CORAB $@5 lines . $@6 CORCE

    $default  reduce usando la regla 32 ($@6)

    $@6  ir al estado 94


estado 78

   15 I: IF COMPARATION BODY $@2 ELSE . BODY

    CORAB  desplazar e ir al estado 44

    BODY  ir al estado 95


estado 79

   41 VARIABLES: VARIABLES COMA ID .

    $default  reduce usando la regla 41 (VARIABLES)


estado 80

   45 TIPO: STRINGT .

    $default  reduce usando la regla 45 (TIPO)


estado 81

   47 TIPO: INTEGER .

    $default  reduce usando la regla 47 (TIPO)


estado 82

   46 TIPO: REAL .

    $default  reduce usando la regla 46 (TIPO)


estado 83

   42 LISTATIPO: CUAAB TIPOS . CUACE
   44 TIPOS: TIPOS . COMA TIPO

    COMA   desplazar e ir al estado 96
    CUACE  desplazar e ir al estado 97


estado 84

   43 TIPOS: TIPO .

    $default  reduce usando la regla 43 (TIPOS)


estado 85

   49 F: FOR ID OP_AS INT TO . INT STEP $@7 lines NEXT ID

    INT  desplazar e ir al estado 98


estado 86

   20 COND: CONDFINAL $@3 OR CONDFINAL .

    $default  reduce usando la regla 20 (COND)


estado 87

   22 COND: CONDFINAL $@4 AND CONDFINAL .

    $default  reduce usando la regla 22 (COND)


estado 88

   56 SIGNO: MAS .

    $default  reduce usando la regla 56 (SIGNO)


estado 89

   57 SIGNO: MENOS .

    $default  reduce usando la regla 57 (SIGNO)


estado 90

   58 SIGNO: POR .

    $default  reduce usando la regla 58 (SIGNO)


estado 91

   59 SIGNO: DIV .

    $default  reduce usando la regla 59 (SIGNO)


estado 92

   55 EXPRESIONEQU: INT SIGNO . INT

    INT  desplazar e ir al estado 99


estado 93

   52 E: EQU PARAB EXPRESIONEQU FIN . LISTAEQU PARCE

    CUAAB  desplazar e ir al estado 100

    LISTAEQU  ir al estado 101


estado 94

   33 BODY: CORAB $@5 lines $@6 . CORCE

    CORCE  desplazar e ir al estado 102


estado 95

   15 I: IF COMPARATION BODY $@2 ELSE BODY .

    $default  reduce usando la regla 15 (I)


estado 96

   44 TIPOS: TIPOS COMA . TIPO

    STRINGT  desplazar e ir al estado 80
    INTEGER  desplazar e ir al estado 81
    REAL     desplazar e ir al estado 82

    TIPO  ir al estado 103


estado 97

   42 LISTATIPO: CUAAB TIPOS CUACE .

    $default  reduce usando la regla 42 (LISTATIPO)


estado 98

   49 F: FOR ID OP_AS INT TO INT . STEP $@7 lines NEXT ID

    CUAAB  desplazar e ir al estado 104

    STEP  ir al estado 105


estado 99

   55 EXPRESIONEQU: INT SIGNO INT .

    $default  reduce usando la regla 55 (EXPRESIONEQU)


estado 100

   60 LISTAEQU: CUAAB . ELEMENTOEQU CUACE

    INT  desplazar e ir al estado 33
    ID   desplazar e ir al estado 34

    ELEMENTOEQU  ir al estado 106
    V            ir al estado 107


estado 101

   52 E: EQU PARAB EXPRESIONEQU FIN LISTAEQU . PARCE

    PARCE  desplazar e ir al estado 108


estado 102

   33 BODY: CORAB $@5 lines $@6 CORCE .

    $default  reduce usando la regla 33 (BODY)


estado 103

   44 TIPOS: TIPOS COMA TIPO .

    $default  reduce usando la regla 44 (TIPOS)


estado 104

   50 STEP: CUAAB . CUACE
   51     | CUAAB . INT CUACE

    INT    desplazar e ir al estado 109
    CUACE  desplazar e ir al estado 110


estado 105

   49 F: FOR ID OP_AS INT TO INT STEP . $@7 lines NEXT ID

    $default  reduce usando la regla 48 ($@7)

    $@7  ir al estado 111


estado 106

   60 LISTAEQU: CUAAB ELEMENTOEQU . CUACE
   62 ELEMENTOEQU: ELEMENTOEQU . COMA V

    COMA   desplazar e ir al estado 112
    CUACE  desplazar e ir al estado 113


estado 107

   61 ELEMENTOEQU: V .

    $default  reduce usando la regla 61 (ELEMENTOEQU)


estado 108

   52 E: EQU PARAB EXPRESIONEQU FIN LISTAEQU PARCE .

    $default  reduce usando la regla 52 (E)


estado 109

   51 STEP: CUAAB INT . CUACE

    CUACE  desplazar e ir al estado 114


estado 110

   50 STEP: CUAAB CUACE .

    $default  reduce usando la regla 50 (STEP)


estado 111

   49 F: FOR ID OP_AS INT TO INT STEP $@7 . lines NEXT ID

    ID       desplazar e ir al estado 1
    WHILE    desplazar e ir al estado 2
    IF       desplazar e ir al estado 3
    DIM      desplazar e ir al estado 4
    FOR      desplazar e ir al estado 5
    DISPLAY  desplazar e ir al estado 6
    GET      desplazar e ir al estado 7

    lines  ir al estado 115
    line   ir al estado 10
    W      ir al estado 11
    I      ir al estado 12
    A      ir al estado 13
    DIS    ir al estado 14
    D      ir al estado 15
    F      ir al estado 16


estado 112

   62 ELEMENTOEQU: ELEMENTOEQU COMA . V

    INT  desplazar e ir al estado 33
    ID   desplazar e ir al estado 34

    V  ir al estado 116


estado 113

   60 LISTAEQU: CUAAB ELEMENTOEQU CUACE .

    $default  reduce usando la regla 60 (LISTAEQU)


estado 114

   51 STEP: CUAAB INT CUACE .

    $default  reduce usando la regla 51 (STEP)


estado 115

   49 F: FOR ID OP_AS INT TO INT STEP $@7 lines . NEXT ID

    NEXT  desplazar e ir al estado 117


estado 116

   62 ELEMENTOEQU: ELEMENTOEQU COMA V .

    $default  reduce usando la regla 62 (ELEMENTOEQU)


estado 117

   49 F: FOR ID OP_AS INT TO INT STEP $@7 lines NEXT . ID

    ID  desplazar e ir al estado 118


estado 118

   49 F: FOR ID OP_AS INT TO INT STEP $@7 lines NEXT ID .

    $default  reduce usando la regla 49 (F)
